--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -427,6 +427,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{notation}
+		\label{notation:aplicació identitat}
 		Aprofitant el Teorema \myref{thm:unicitat de les inverses de les aplicacions bijectives} denotarem l'inversa d'una aplicació \(f:A\rightarrow B\) amb \(f^{-1}\), i per tant definim l'aplicació
 		\[f^{-1}\circ f=\Id_{A}.\]
 		
@@ -452,6 +453,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{corollary}
+		\label{cor:l'inversa d'una aplicació invertible és invertible}
 		Si \(f\) és invertible aleshores \(f^{-1}\) és invertible i \(\left(f^{-1}\right)^{-1}=f\).
 	\end{corollary}
 	\section{Relacions d'equivalència}
