Continuada la teoria de topologia fins arribar als subespais topològics

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -114,6 +114,7 @@
 \DeclareMathOperator{\interior}{Int}
 \DeclareMathOperator{\clausura}{Cl}
 \DeclareMathOperator{\distancia}{d}
+\DeclareMathOperator{\esfera}{S}
 
 \let\ker\relax
 \DeclareMathOperator*{\ker}{ker}
