--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -402,6 +402,7 @@
 	\end{theorem}
 	\begin{theorem}
 		\label{thm:composició de bijectives bijectiva}
+		\label{thm:conjugació de bijectives bijectiva}
 		Siguin \(f\colon A\rightarrow B\) i \(g\colon B\rightarrow C\) dues aplicacions bijectiva. Aleshores l'aplicació \(g\circ f\) és bijectiva.
 		\begin{proof}
 			Per la definició d'\myref{def:aplicació bijectiva} hem de veure que \(g\circ f\) és injectiva i exhaustiva. Ara bé, per hipòtesi tenim que \(f\) i \(g\) són bijectives, i de nou per la definició d'\myref{def:aplicació bijectiva} tenim que \(f\) i \(g\) són ambdues injectives i exhaustives. Per tant, pel Teorema \myref{thm:composició d'injectives injectiva} tenim que \(g\circ f\) és injectiva, i pel Teorema \myref{thm:composició d'exhaustives exhaustiva} tenim que \(g\circ f\) és exhaustiva, com volíem veure.
