Demostrat el Teorema de Picard a EDOS I

--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -1191,6 +1191,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}
+		\label{thm:la norma d'una integral és menos que l'integral de la norma}
 		Siguin \(\mathfrak{R}\subset\mathbb{R}^{d}\) un rectangle i \(f\colon\mathfrak{R}\to\mathbb{R}\) una funció integrable Riemann amb \(\abs{f(x)}\leq M\) per a tot \(x\in \mathfrak{R}\). Aleshores la funció \(\abs{f}\) és integrable Riemann i
 		\[\abs{\int_{\mathfrak{R}}f}\leq\int_{\mathfrak{R}}\abs{f}\leq M\abs{\mathfrak{R}}.\]
 		\begin{proof}
