Canvi del títol d'una subsecció (ara 'El Teorema de Picard')

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -162,7 +162,7 @@
 		\end{proof}
 	\end{corollary}
 	\section{Teoremes d'existència i unicitat}
-	\subsection{Equacions diferencials ordinàries}
+	\subsection{El Teorema de Picard}
 	\begin{definition}[Funció Lipschitz respecte la segona variable]
 		\labelname{funció Lipschitz respecte la segona variable}\label{def:funció Lipschitz respecte la segona variable}
 		Siguin \(\Omega=\mathbb{R}\times\mathbb{R}^{n}\) un conjunt, \(K>0\) un real i \(f\colon\Omega\longrightarrow\mathbb{R}^{n}\) una funció tal que
