--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -113,6 +113,10 @@
 		\[F(x)=\int_{a}^{x}f(t)dt\]
 		una funció. Aleshores \(F(x)\) és derivable en \([a,b]\) i \(F'(x)=f(x)\) per a tot \(x\) de \([a,b]\).
 	\end{theorem}
+	\begin{theorem}[Teorema de Bolzano-Weierstrass]
+		\labelname{Teorema de Bolzano-Weierstrass}\label{thm:Teorema de Bolzano-Weierstrass}
+		Successió acotada té parcial convergent
+	\end{theorem}
 	\section{Trobar lloc per tot això}
 	\begin{definition}[Conjunt obert, tancat...]
 		\labelname{conjunt obert}\label{def:obert CDVO}
